<resources>

    <string name="app_name">LDLMarketing</string>
    <string name="hello">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">LDLMarketing</string>

    <!-- image stuff -->
    <string name="clear_cache_menu">Clear Caches</string>
    <string name="clear_cache_complete_toast">Caches have been cleared</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="no_network_connection_toast">No network connection found</string>
    
    <!-- About Strings -->
    <string name="about_s0" >LDL Advertising is a Manila-based end to end full service boutique advertising agency that specializes in Brand Development, Campaigns, Digital Marketing, Event Conceptualization and Management, and Public Relations.</string>
    <string name="about_s1">Claudine graduated from Ateneo de Manila University with a degree in BS Management. After heading the Guest Relations of Discovery Suites for three year, she started her career in advertising as an account manager for Philippine telco giant, PLDT. Dedicated to the Domestic Data Category under the Corporate Business Group, she was responsible for the launching of PLDT SWUP, DFON (Domestic Fiber Optic Network), SNAP, and Guardian in two years.</string>
    <string name="about_s2">Theresa graduated from the University of Portsmouth, United Kingdom with a BSC Honours degree in Business Information Technology. She started a career in advertising by working for a production outfit that specializes in TVCs (TV Commercials) and moved to an advertising agency after a year. She was an account executive of an embedded agency of PLDT &amp; Smart for three years. PLDT is the largest telecommunications company in the Philippines. Its sister company, Smart, has the largest number of mobile pre-paid subscribers. Theresa handled PLDT &amp; Smart\’ Corporate Business Group and Small to Medium Enterprises. She was part of the team that launched \‘The Smarter Blackberry\' and she was in charge of marketing collaterals and coordination with the voice sector of PLDT &amp; Smart\’ CBG and SME. She is also currently the Chief Executive Officer of eManage, I.T. Business Solutions Provider. Visit www.emanage.com.ph for more information.</string>
    <string name="about_s3">Noelle is a self-taught graphic designer. She has been dabbling in graphic design since her college days at Ateneo de Manila University where she graduated with a degree in AB Humanities. She has also pursued further studies in Contemporary Art at Metafora, Barcelona, Spain. She has done numerous logo identity and print design projects for retail companies, restaurants and small businesses and has produced a line of paper goods and stationary. Noelle has also attended design seminars abroad and participated in group art exhibits in Manila and Barcelona, Spain.</string>
    <!-- FAQ Strings -->
    <string name="faq_q1">What is a retainer agreement?</string>
    <string name="faq_a1">Under a retainer agreement a certain fee will be paid by the client to avail and  maintain the services of LDL. A minimum contract period of 6 months shall be enforced in this agreement.</string>
    <string name="faq_q2">What are the benefits of having a retainer agreement with LDL? </string>
    <string name="faq_a2">Clients will enjoy discounted rates under the retainer agreement. You can be assured that 2 or more executives will be working on your project.</string>
    <string name="faq_q3">Is it possible to contract LDL on a per project basis? </string>
    <string name="faq_a3">Yes, it is possible to contract LDL on a per project basis but the client will reap more benefits under the retainer agreement.</string>
    <string name="share_string">Share&amp;Save</string>
    <string name="save_string">Save</string>
    <string name="contact_s">Contact Us</string>
    <string name="hotline_s">Hotline</string>
    <string name="hotline_number">0915 912 2289</string>
    <string name="email_s">Email</string>
    <string name="email_add">info@leungdeleonmarketing.com</string>
    <string name="address_s">Address</string>
    <string name="address_full">Unit 1-A Edifice Studios, G.E.E. Building, 2301 Pasong Tamo Extension, Makati 1231</string>

</resources>