<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/background_white">

    <!-- shadow tucked under title -->

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <!-- The content -->

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/header"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:padding="10dp" 
            >

            <TextView
                android:id="@+id/faq1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/faq_q1"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/darkgrey" />

            <TextView
                android:id="@+id/a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text="@string/faq_a1"
                android:textColor="@color/darkgrey" />

            <!-- pink line -->

            <ImageView
                android:layout_width="350dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/lightpink" />

            <TextView
                android:id="@+id/faq2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:paddingTop="2dp"
                android:text="@string/faq_q2"
                android:textSize="17sp"
                android:textStyle="bold" 
                android:textColor="@color/darkgrey"/>

            <TextView
                android:id="@+id/a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text="@string/faq_a2" 
                android:textColor="@color/darkgrey"/>

            <!-- pink line -->

            <ImageView
                android:layout_width="350dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/lightpink" />

            <TextView
                android:id="@+id/faq3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:paddingTop="2dp"
                android:text="@string/faq_q3"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/darkgrey" />

            <TextView
                android:id="@+id/a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text="@string/faq_a3" 
                android:textColor="@color/darkgrey"/>
        </LinearLayout>
    </ScrollView>

<!--     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="@drawable/nav_shadow" /> -->

</RelativeLayout>